Different SSH key method

--- a/.drone.yml
+++ b/.drone.yml
@@ -26,11 +26,11 @@ steps:
       DOMAIN_PRODUCTION:
         from_secret: DOMAIN_PRODUCTION
     commands:
-      - rm -rf ~/.ssh
+      - 'which ssh-agent || ( apt-get install -qq openssh-client )'
+      - eval $(ssh-agent -s)
+      - ssh-add <(echo "$SSH_PRIVATE_KEY")
       - mkdir -p ~/.ssh
-      - ssh-keyscan -t rsa "$DOMAIN_PRODUCTION" >> ~/.ssh/known_hosts
-      - echo "$SSH_PRIVATE_KEY" >> ~/.ssh/id_rsa
-      - chmod 600 ~/.ssh/id_rsa
+      - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
       - dep deploy production
 
   - name: deploy staging
