--- a/.drone.yml
+++ b/.drone.yml
@@ -26,9 +26,9 @@ steps:
       DOMAIN_PRODUCTION:
         from_secret: DOMAIN_PRODUCTION
     commands:
-      - 'which ssh-agent || ( apt-get install -qq openssh-client )'
+      - 'which ssh-agent || apt-get install -qq openssh-client'
       - eval $(ssh-agent -s)
-      - ssh-add <(echo "$SSH_PRIVATE_KEY")
+      - ssh-add < echo "$SSH_PRIVATE_KEY"
       - mkdir -p ~/.ssh
       - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
       - dep deploy production
