--- a/.env.example
+++ b/.env.example
@@ -44,6 +44,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+MIX_ASSET_URL=null
 
 RECAPTCHA_SITE_KEY=null
 RECAPTCHA_SECRET_KEY=null
