--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -32,6 +32,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
