--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm ci
 
       - name: NPM Build
-        run: npm run production
+        run: npm run build
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v2
