--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -34,8 +34,17 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+
       - name: Checkout Repository
         uses: actions/checkout@v2
+
+      - uses: chrnorm/deployment-action@releases/v1
+        name: Create GitHub Deployment
+        id: deployment
+        with:
+          token: "${{ github.token }}"
+          target_url: ${{ secrets.STAGING_URL }}
+          environment: staging
 
       - name: Download Artifacts
         uses: actions/download-artifact@v2
@@ -55,3 +64,21 @@ jobs:
 
       - name: Create CloudFront Invalidation
         run: aws cloudfront create-invalidation --distribution-id ${{ secrets.STAGING_AWS_CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
+
+      - name: Update Deployment Status (Success)
+        if: success()
+        uses: chrnorm/deployment-status@releases/v1
+        with:
+          token: "${{ github.token }}"
+          target_url: http://my-app-url.com
+          state: "success"
+          deployment_id: ${{ steps.deployment.outputs.deployment_id }}
+
+      - name: Update Deployment Status (Failure)
+        if: failure()
+        uses: chrnorm/deployment-status@releases/v1
+        with:
+          token: "${{ github.token }}"
+          target_url: ${{ secrets.STAGING_URL }}
+          state: "failure"
+          deployment_id: ${{ steps.deployment.outputs.deployment_id }}
