--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -39,12 +39,13 @@ jobs:
         uses: actions/checkout@v2
 
       - uses: chrnorm/deployment-action@releases/v1
-        name: Create GitHub Deployment
         id: deployment
+        name: Create GitHub Deployment
         with:
-          token: "${{ github.token }}"
-          target_url: ${{ secrets.STAGING_URL }}
           environment: staging
+          environment_url: ${{ secrets.STAGING_URL }}
+          target_url: ${{ secrets.STAGING_URL }}
+          token: "${{ github.token }}"
 
       - name: Download Artifacts
         uses: actions/download-artifact@v2
@@ -69,16 +70,18 @@ jobs:
         if: success()
         uses: chrnorm/deployment-status@releases/v1
         with:
-          token: "${{ github.token }}"
-          target_url: http://my-app-url.com
-          state: "success"
           deployment_id: ${{ steps.deployment.outputs.deployment_id }}
+          environment_url: ${{ secrets.STAGING_URL }}
+          target_url: ${{ secrets.STAGING_URL }}
+          state: "success"
+          token: "${{ github.token }}"
 
       - name: Update Deployment Status (Failure)
         if: failure()
         uses: chrnorm/deployment-status@releases/v1
         with:
-          token: "${{ github.token }}"
+          deployment_id: ${{ steps.deployment.outputs.deployment_id }}
+          environment_url: ${{ secrets.STAGING_URL }}
           target_url: ${{ secrets.STAGING_URL }}
           state: "failure"
-          deployment_id: ${{ steps.deployment.outputs.deployment_id }}
+          token: "${{ github.token }}"
