--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -20,7 +20,6 @@ jobs:
         name: Create GitHub Deployment
         with:
           environment: staging
-          environment_url: ${{ secrets.STAGING_URL }}
           state: "pending"
           target_url: ${{ secrets.STAGING_URL }}
           token: "${{ github.token }}"
@@ -63,6 +62,14 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
+      - name: Update Deployment Status (In Progress)
+        uses: chrnorm/deployment-status@releases/v1
+        with:
+          deployment_id: ${{ needs.build.outputs.deployment_id }}
+          target_url: ${{ secrets.STAGING_URL }}
+          state: "in_progress"
+          token: "${{ github.token }}"
+
       - name: Upload Build to S3
         run: aws s3 sync public s3://${{ secrets.STAGING_AWS_BUCKET }} --delete --metadata Header-X-Robots-Tag=none;
 
@@ -84,7 +91,6 @@ jobs:
         uses: chrnorm/deployment-status@releases/v1
         with:
           deployment_id: ${{ needs.build.outputs.deployment_id }}
-          environment_url: ${{ secrets.STAGING_URL }}
           target_url: ${{ secrets.STAGING_URL }}
           state: "failure"
           token: "${{ github.token }}"
