--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -37,6 +37,7 @@ jobs:
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v2
+        retention-days: 1
         with:
           name: build
           path: public
