--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -47,8 +47,7 @@ jobs:
     needs: build
     strategy:
       matrix:
-#        os: [ macos-latest, ubuntu-latest, windows-latest ]
-        os: [ ubuntu-latest ]
+        os: [ macos-latest, ubuntu-latest, windows-latest ]
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
@@ -94,63 +93,63 @@ jobs:
 #          #          start-windows: npm run start:windows:server
 #          wait-on: http://localhost:8000
 
-  deploy:
-    runs-on: ubuntu-latest
+#  deploy:
+#    runs-on: ubuntu-latest
 #    needs: [ build, cypress-chrome, cypress-firefox, cypress-edge ]
-    needs: [ build, cypress-chrome ]
-    steps:
-
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-      - name: Download Artifacts
-        uses: actions/download-artifact@v2
-        with:
-          name: build
-          path: public
-
-      - name: Configure AWS
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
-
-      - name: Update Deployment Status (In Progress)
-        uses: chrnorm/deployment-status@releases/v1
-        with:
-          deployment_id: ${{ needs.build.outputs.deployment_id }}
-          target_url: ${{ secrets.STAGING_URL }}
-          state: "in_progress"
-          token: "${{ github.token }}"
-
-      - name: Upload Build to S3
-        run: aws s3 sync public s3://${{ secrets.STAGING_AWS_BUCKET }} --delete --metadata Header-X-Robots-Tag=none;
-
-      - name: Create CloudFront Invalidation
-        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.STAGING_AWS_CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
-
-      - name: Purge Cloudflare Cache
-        uses: jakejarvis/cloudflare-purge-action@v0.3.0
-        env:
-          CLOUDFLARE_ZONE: ${{ secrets.CLOUDFLARE_ZONE_ID }}
-          CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
-
-      - name: Update Deployment Status (Success)
-        if: success()
-        uses: chrnorm/deployment-status@releases/v1
-        with:
-          deployment_id: ${{ needs.build.outputs.deployment_id }}
-          environment_url: ${{ secrets.STAGING_URL }}
-          target_url: ${{ secrets.STAGING_URL }}
-          state: "success"
-          token: "${{ github.token }}"
-
-      - name: Update Deployment Status (Failure)
-        if: failure()
-        uses: chrnorm/deployment-status@releases/v1
-        with:
-          deployment_id: ${{ needs.build.outputs.deployment_id }}
-          target_url: ${{ secrets.STAGING_URL }}
-          state: "failure"
-          token: "${{ github.token }}"
+#    needs: [ build, cypress-chrome ]
+#    steps:
+#
+#      - name: Checkout Repository
+#        uses: actions/checkout@v2
+#
+#      - name: Download Artifacts
+#        uses: actions/download-artifact@v2
+#        with:
+#          name: build
+#          path: public
+#
+#      - name: Configure AWS
+#        uses: aws-actions/configure-aws-credentials@v1
+#        with:
+#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#          aws-region: ${{ secrets.AWS_REGION }}
+#
+#      - name: Update Deployment Status (In Progress)
+#        uses: chrnorm/deployment-status@releases/v1
+#        with:
+#          deployment_id: ${{ needs.build.outputs.deployment_id }}
+#          target_url: ${{ secrets.STAGING_URL }}
+#          state: "in_progress"
+#          token: "${{ github.token }}"
+#
+#      - name: Upload Build to S3
+#        run: aws s3 sync public s3://${{ secrets.STAGING_AWS_BUCKET }} --delete --metadata Header-X-Robots-Tag=none;
+#
+#      - name: Create CloudFront Invalidation
+#        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.STAGING_AWS_CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
+#
+#      - name: Purge Cloudflare Cache
+#        uses: jakejarvis/cloudflare-purge-action@v0.3.0
+#        env:
+#          CLOUDFLARE_ZONE: ${{ secrets.CLOUDFLARE_ZONE_ID }}
+#          CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
+#
+#      - name: Update Deployment Status (Success)
+#        if: success()
+#        uses: chrnorm/deployment-status@releases/v1
+#        with:
+#          deployment_id: ${{ needs.build.outputs.deployment_id }}
+#          environment_url: ${{ secrets.STAGING_URL }}
+#          target_url: ${{ secrets.STAGING_URL }}
+#          state: "success"
+#          token: "${{ github.token }}"
+#
+#      - name: Update Deployment Status (Failure)
+#        if: failure()
+#        uses: chrnorm/deployment-status@releases/v1
+#        with:
+#          deployment_id: ${{ needs.build.outputs.deployment_id }}
+#          target_url: ${{ secrets.STAGING_URL }}
+#          state: "failure"
+#          token: "${{ github.token }}"
