--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -49,7 +49,7 @@ jobs:
     needs: build
     strategy:
       matrix:
-        os: [ macos-latest, ubuntu-latest, windows-latest ]
+        os: [ macos-latest, windows-latest, ubuntu-latest ]
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
@@ -60,11 +60,11 @@ jobs:
           name: build
           path: ./
 
-      - uses: cypress-io/github-action@v2
+      - name: Cypress
+        uses: cypress-io/github-action@v2
         with:
           browser: chrome
           start: npm run serve
-          #          start-windows: npm run start:windows:server
           wait-on: http://localhost:9000
 
 #  cypress-firefox:
@@ -82,18 +82,25 @@ jobs:
 #          start: npm start
 #          wait-on: http://localhost:8000
 #
-#  cypress-edge:
-#    runs-on: [ macos-latest, windows-latest ]
-#    needs: build
-#    steps:
-#      - uses: actions/checkout@v2
-#      - uses: cypress-io/github-action@v2
-#        with:
-#          browser: edge
-#          build: npm run build
-#          start: npm start
-#          #          start-windows: npm run start:windows:server
-#          wait-on: http://localhost:8000
+  cypress-edge:
+    runs-on: [ macos-latest, windows-latest, ubuntu-latest ]
+    needs: build
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Download Artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: build
+          path: ./
+
+      - name: Cypress
+        uses: cypress-io/github-action@v2
+        with:
+          browser: edge
+          start: npm run serve
+          wait-on: http://localhost:8000
 
 #  deploy:
 #    runs-on: ubuntu-latest
