--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -67,43 +67,46 @@ jobs:
           start: npm run serve
           wait-on: http://localhost:9000
 
-#  cypress-firefox:
-#    runs-on: ubuntu-latest
-#    needs: build
-#    container:
-#      image: cypress/browsers:node12.16.1-chrome80-ff73
-#      options: --user 1001
-#    steps:
-#      - uses: actions/checkout@v2
-#      - uses: cypress-io/github-action@v2
-#        with:
-#          browser: firefox
-#          build: npm run build
-#          start: npm start
-#          wait-on: http://localhost:8000
-#
-  cypress-edge:
+  cypress-firefox:
     runs-on: ${{ matrix.os }}
     needs: build
     strategy:
       matrix:
-        os: [ macos-latest, windows-latest ]
+        os: [ macos-latest, windows-latest, ubuntu-latest ]
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Download Artifacts
-        uses: actions/download-artifact@v2
-        with:
-          name: build
-          path: ./
-
       - name: Cypress
         uses: cypress-io/github-action@v2
         with:
-          browser: edge
-          start: npm run serve
+          browser: firefox
+          build: npm run build
+          start: npm start
           wait-on: http://localhost:9000
+
+#  cypress-edge:
+#    runs-on: ${{ matrix.os }}
+#    needs: build
+#    strategy:
+#      matrix:
+#        os: [ macos-latest, windows-latest ]
+#    steps:
+#      - name: Checkout Repository
+#        uses: actions/checkout@v2
+#
+#      - name: Download Artifacts
+#        uses: actions/download-artifact@v2
+#        with:
+#          name: build
+#          path: ./
+#
+#      - name: Cypress
+#        uses: cypress-io/github-action@v2
+#        with:
+#          browser: edge
+#          start: npm run serve
+#          wait-on: http://localhost:9000
 
 #  deploy:
 #    runs-on: ubuntu-latest
