--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -83,8 +83,7 @@ jobs:
         uses: cypress-io/github-action@v2
         with:
           browser: firefox
-          build: npm run build
-          start: npm start
+          start: npm run serve
           wait-on: http://localhost:9000
 
   cypress-edge:
