Use Matrix for Firefox and Chrome

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -44,13 +44,14 @@ jobs:
             .cache
           retention-days: 1
 
-  cypress-chrome:
+  cypress:
     runs-on: ${{ matrix.os }}
     needs: build
     strategy:
       fail-fast: false
       matrix:
         os: [ macos-latest, windows-latest, ubuntu-latest ]
+        browser: [ chrome, firefox ]
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
@@ -64,34 +65,11 @@ jobs:
       - name: Cypress
         uses: cypress-io/github-action@v2
         with:
-          browser: chrome
+          browser: ${{ matrix.browser }}
           start: npm run serve
           wait-on: http://localhost:9000
 
-  cypress-firefox:
-    runs-on: ${{ matrix.os }}
-    needs: build
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ macos-latest, windows-latest, ubuntu-latest ]
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-      - name: Download Artifacts
-        uses: actions/download-artifact@v2
-        with:
-          name: build
-          path: ./
-
-      - name: Cypress
-        uses: cypress-io/github-action@v2
-        with:
-          browser: firefox
-          start: npm run serve
-          wait-on: http://localhost:9000
-
+  # TODO: Once edge has properly been released for Linux, we can combine this into the above matrix.
   cypress-edge:
     runs-on: ${{ matrix.os }}
     needs: build
