--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -1,13 +1,13 @@
-name: Dev # TODO: Change this before merging back in.
+name: Staging
 
 on:
   push:
     branches:
-      - cypress-github-actions # TODO: change this branch before merging in.
+      - develop
 
 jobs:
 
-  build: # TODO: For production we need to disable Umami
+  build:
     runs-on: ubuntu-latest
     outputs:
       deployment_id: ${{ steps.deployment.outputs.deployment_id }}
@@ -15,9 +15,9 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@master
 
-      - uses: chrnorm/deployment-action@releases/v1
+      - name: Create GitHub Deployment
+        uses: chrnorm/deployment-action@releases/v1
         id: deployment
-        name: Create GitHub Deployment
         with:
           environment: staging
           initial_status: "pending"
@@ -53,6 +53,7 @@ jobs:
         os: [ macos-latest, windows-latest, ubuntu-latest ]
         browser: [ chrome, firefox ]
     steps:
+
       - name: Checkout Repository
         uses: actions/checkout@v2
 
@@ -94,63 +95,62 @@ jobs:
           start: npm run serve
           wait-on: http://localhost:9000
 
-#  deploy:
-#    runs-on: ubuntu-latest
-#    needs: [ build, cypress-chrome, cypress-firefox, cypress-edge ]
-#    needs: [ build, cypress-chrome ]
-#    steps:
-#
-#      - name: Checkout Repository
-#        uses: actions/checkout@v2
-#
-#      - name: Download Artifacts
-#        uses: actions/download-artifact@v2
-#        with:
-#          name: build
-#          path: public
-#
-#      - name: Configure AWS
-#        uses: aws-actions/configure-aws-credentials@v1
-#        with:
-#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#          aws-region: ${{ secrets.AWS_REGION }}
-#
-#      - name: Update Deployment Status (In Progress)
-#        uses: chrnorm/deployment-status@releases/v1
-#        with:
-#          deployment_id: ${{ needs.build.outputs.deployment_id }}
-#          target_url: ${{ secrets.STAGING_URL }}
-#          state: "in_progress"
-#          token: "${{ github.token }}"
-#
-#      - name: Upload Build to S3
-#        run: aws s3 sync public s3://${{ secrets.STAGING_AWS_BUCKET }} --delete --metadata Header-X-Robots-Tag=none;
-#
-#      - name: Create CloudFront Invalidation
-#        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.STAGING_AWS_CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
-#
-#      - name: Purge Cloudflare Cache
-#        uses: jakejarvis/cloudflare-purge-action@v0.3.0
-#        env:
-#          CLOUDFLARE_ZONE: ${{ secrets.CLOUDFLARE_ZONE_ID }}
-#          CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
-#
-#      - name: Update Deployment Status (Success)
-#        if: success()
-#        uses: chrnorm/deployment-status@releases/v1
-#        with:
-#          deployment_id: ${{ needs.build.outputs.deployment_id }}
-#          environment_url: ${{ secrets.STAGING_URL }}
-#          target_url: ${{ secrets.STAGING_URL }}
-#          state: "success"
-#          token: "${{ github.token }}"
-#
-#      - name: Update Deployment Status (Failure)
-#        if: failure()
-#        uses: chrnorm/deployment-status@releases/v1
-#        with:
-#          deployment_id: ${{ needs.build.outputs.deployment_id }}
-#          target_url: ${{ secrets.STAGING_URL }}
-#          state: "failure"
-#          token: "${{ github.token }}"
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [ build, cypress, cypress-edge ]
+    steps:
+
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Download Artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: build
+          path: public
+
+      - name: Configure AWS
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Update Deployment Status (In Progress)
+        uses: chrnorm/deployment-status@releases/v1
+        with:
+          deployment_id: ${{ needs.build.outputs.deployment_id }}
+          target_url: ${{ secrets.STAGING_URL }}
+          state: "in_progress"
+          token: "${{ github.token }}"
+
+      - name: Upload Build to S3
+        run: aws s3 sync public s3://${{ secrets.STAGING_AWS_BUCKET }} --delete --metadata Header-X-Robots-Tag=none;
+
+      - name: Create CloudFront Invalidation
+        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.STAGING_AWS_CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
+
+      - name: Purge Cloudflare Cache
+        uses: jakejarvis/cloudflare-purge-action@v0.3.0
+        env:
+          CLOUDFLARE_ZONE: ${{ secrets.CLOUDFLARE_ZONE_ID }}
+          CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
+
+      - name: Update Deployment Status (Success)
+        if: success()
+        uses: chrnorm/deployment-status@releases/v1
+        with:
+          deployment_id: ${{ needs.build.outputs.deployment_id }}
+          environment_url: ${{ secrets.STAGING_URL }}
+          target_url: ${{ secrets.STAGING_URL }}
+          state: "success"
+          token: "${{ github.token }}"
+
+      - name: Update Deployment Status (Failure)
+        if: failure()
+        uses: chrnorm/deployment-status@releases/v1
+        with:
+          deployment_id: ${{ needs.build.outputs.deployment_id }}
+          target_url: ${{ secrets.STAGING_URL }}
+          state: "failure"
+          token: "${{ github.token }}"
