--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -15,9 +15,9 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@master
 
-      - uses: chrnorm/deployment-action@releases/v1
+      - name: Create GitHub Deployment
+        uses: chrnorm/deployment-action@releases/v1
         id: deployment
-        name: Create GitHub Deployment
         with:
           environment: staging
           initial_status: "pending"
@@ -39,12 +39,65 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: build
-          path: public
+          path: |
+            public
+            .cache
           retention-days: 1
+
+  cypress:
+    runs-on: ${{ matrix.os }}
+    needs: build
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ macos-latest, windows-latest, ubuntu-latest ]
+        browser: [ chrome, firefox ]
+    steps:
+
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Download Artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: build
+          path: ./
+
+      - name: Cypress
+        uses: cypress-io/github-action@v2
+        with:
+          browser: ${{ matrix.browser }}
+          start: npm run serve
+          wait-on: http://localhost:9000
+
+  # TODO: Once edge has properly been released for Linux, we can combine this into the above matrix.
+  cypress-edge:
+    runs-on: ${{ matrix.os }}
+    needs: build
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ macos-latest, windows-latest ]
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Download Artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: build
+          path: ./
+
+      - name: Cypress
+        uses: cypress-io/github-action@v2
+        with:
+          browser: edge
+          start: npm run serve
+          wait-on: http://localhost:9000
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: [ build, cypress, cypress-edge ]
     steps:
 
       - name: Checkout Repository
