--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -107,7 +107,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: build
-          path: public
+          path: ./
 
       - name: Configure AWS
         uses: aws-actions/configure-aws-credentials@v1
