Add Edge to Cypress matrix and exclude Ubuntu test

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -51,7 +51,10 @@ jobs:
       fail-fast: false
       matrix:
         os: [ macos-latest, windows-latest, ubuntu-latest ]
-        browser: [ chrome, firefox ]
+        browser: [ chrome, edge, firefox ]
+        exclude:  # TODO: Once edge has properly been released for Linux this can be removed.
+          - os: ubuntu-latest
+            browser: edge
     steps:
 
       - name: Checkout Repository
@@ -67,31 +70,6 @@ jobs:
         uses: cypress-io/github-action@v2
         with:
           browser: ${{ matrix.browser }}
-          start: npm run serve -p 8000
-          wait-on: http://localhost:8000
-
-  # TODO: Once edge has properly been released for Linux, we can combine this into the above matrix.
-  cypress-edge:
-    runs-on: ${{ matrix.os }}
-    needs: build
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ macos-latest, windows-latest ]
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-      - name: Download Artifacts
-        uses: actions/download-artifact@v2
-        with:
-          name: build
-          path: ./
-
-      - name: Cypress
-        uses: cypress-io/github-action@v2
-        with:
-          browser: edge
           start: npm run serve -p 8000
           wait-on: http://localhost:8000
 
