--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -75,7 +75,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: [ build, cypress, cypress-edge ]
+    needs: [ build, cypress ]
     steps:
 
       - name: Checkout Repository
