--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -70,7 +70,7 @@ jobs:
         uses: cypress-io/github-action@v2
         with:
           browser: ${{ matrix.browser }}
-          start: npm run serve -p 8000
+          start: npm run serve
           wait-on: http://localhost:8000
 
   deploy:
