--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
   "devDependencies": {
     "cross-env": "^7.0.3",
     "cypress": "^6.5.0",
-    "prettier": "2.2.1",
-    "start-server-and-test": "^1.12.0"
+    "prettier": "2.2.1"
   },
   "keywords": [
     "gatsby"
