--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -15,9 +15,9 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@master
 
-      - uses: chrnorm/deployment-action@releases/v1
+      - name: Create GitHub Deployment
+        uses: chrnorm/deployment-action@releases/v1
         id: deployment
-        name: Create GitHub Deployment
         with:
           environment: production
           initial_status: "pending"
@@ -39,12 +39,22 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: build
-          path: public
+          path: |
+            public
+            .cache
           retention-days: 1
 
-  deploy:
-    runs-on: ubuntu-latest
+  cypress:
+    runs-on: ${{ matrix.os }}
     needs: build
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ macos-latest, windows-latest, ubuntu-latest ]
+        browser: [ chrome, edge, firefox ]
+        exclude:  # TODO: Once edge has properly been released for Linux this can be removed.
+          - os: ubuntu-latest
+            browser: edge
     steps:
 
       - name: Checkout Repository
@@ -54,7 +64,28 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: build
-          path: public
+          path: ./
+
+      - name: Cypress
+        uses: cypress-io/github-action@v2
+        with:
+          browser: ${{ matrix.browser }}
+          start: npm run serve
+          wait-on: http://localhost:8000
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [ build, cypress ]
+    steps:
+
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+
+      - name: Download Artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: build
+          path: ./
 
       - name: Configure AWS
         uses: aws-actions/configure-aws-credentials@v1
