--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -73,6 +73,15 @@ jobs:
           start: npm run serve
           wait-on: http://localhost:8000
 
+      - name: Update Deployment Status (Failure)
+        if: failure()
+        uses: chrnorm/deployment-status@releases/v1
+        with:
+          deployment_id: ${{ needs.build.outputs.deployment_id }}
+          target_url: ${{ secrets.STAGING_URL }}
+          state: "failure"
+          token: "${{ github.token }}"
+
   deploy:
     runs-on: ubuntu-latest
     needs: [ build, cypress ]
