--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -35,14 +35,13 @@ jobs:
       - name: NPM Build
         run: npm run build
 
-      - name: Upload Artifacts - Caches
-        uses: actions/upload-artifact@v2
+      - name: Cache
+        uses: actions/cache@v2
         with:
-          name: caches
           path: |
             .cache
             node_modules
-          retention-days: 3
+        key: ${{ runner.os }}-node12-${{ hashFiles('package-lock.json') }}
 
       - name: Upload Artifacts - Build
         uses: actions/upload-artifact@v2
@@ -66,11 +65,13 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Download Artifacts - Caches
-        uses: actions/download-artifact@v2
+      - name: Cache
+        uses: actions/cache@v2
         with:
-          name: caches
-          path: ./
+          path: |
+            .cache
+            node_modules
+        key: ${{ runner.os }}-node12-${{ hashFiles('package-lock.json') }}
 
       - name: Download Artifacts - Build
         uses: actions/download-artifact@v2
