--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -34,8 +34,8 @@ jobs:
         with:
           path: |
             .cache
-            **/node_modules
-          key: ${{ runner.os }}-node12 }}
+            node_modules
+          key: ${{ runner.os }}-node12-${{ hashFiles('package-lock.json') }}
 
       - name: NPM Install
         run: npm ci
@@ -70,8 +70,8 @@ jobs:
         with:
           path: |
             .cache
-            **/node_modules
-          key: ${{ runner.os }}-node12 }}
+            node_modules
+          key: ${{ runner.os }}-node12-${{ hashFiles('package-lock.json') }}
 
       - name: Download Artifacts - Build
         uses: actions/download-artifact@v2
@@ -82,6 +82,7 @@ jobs:
       - name: Cypress
         uses: cypress-io/github-action@v2
         with:
+          install-command: npm install
           browser: ${{ matrix.browser }}
           start: npm run serve
           wait-on: http://localhost:8000
