--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -90,7 +90,7 @@ jobs:
       - name: Upload Artifacts - Cypress Evidence
         uses: actions/upload-artifact@v2
         with:
-          name: cypress
+          name: cypress-${{ matrix.os }}-${{ matrix.browser }}
           path: |
             cypress/screenshots
             cypress/videos
