--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Matt Banner <matt@banner.wtf>",
   "dependencies": {
+    "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^10.2.4",
     "dotenv": "^8.2.0",
     "gatsby": "^2.32.3",
