--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -20,19 +20,14 @@ jobs:
         with:
           node-version: '12'
 
-      - name: Cache
-        uses: actions/cache@v2
-        with:
-          path: |
-            .cache
-            node_modules
-          key: ${{ runner.os }}-node12-${{ hashFiles('package-lock.json') }}
-
       - name: NPM Install
         run: npm ci
 
       - name: NPM Build
         run: npm run build
+        env:
+          CRAFTGQL_URL: ${{ secrets.CONTENT_URL }}
+          CRAFTGQL_TOKEN: ${{ secrets.CONTENT_TOKEN }}
 
       - name: Upload Artifacts - Build
         uses: actions/upload-artifact@v2
@@ -56,14 +51,6 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Cache
-        uses: actions/cache@v2
-        with:
-          path: |
-            .cache
-            node_modules
-          key: ${{ runner.os }}-node12-${{ hashFiles('package-lock.json') }}
-
       - name: Download Artifacts - Build
         uses: actions/download-artifact@v2
         with:
@@ -73,7 +60,6 @@ jobs:
       - name: Cypress
         uses: cypress-io/github-action@v2
         with:
-          install-command: npm install
           browser: ${{ matrix.browser }}
           start: npm run serve
           wait-on: http://localhost:8000
