--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "version": "0.1.0",
   "author": "Matt Banner <matt@banner.wtf>",
   "dependencies": {
+    "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^10.2.4",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.32.3",
     "gatsby-image": "^2.11.0",
     "gatsby-plugin-manifest": "^2.12.0",
@@ -27,6 +29,7 @@
   "devDependencies": {
     "cross-env": "^7.0.3",
     "cypress": "^6.5.0",
+    "gatsby-source-craft": "^1.0.0-beta.3",
     "prettier": "2.2.1"
   },
   "keywords": [
