--- a/package.json
+++ b/package.json
@@ -5,31 +5,33 @@
   "version": "0.1.0",
   "author": "Matt Banner <matt@banner.wtf>",
   "dependencies": {
+    "@headlessui/react": "^1.1.0",
+    "@heroicons/react": "^1.0.1",
     "@tailwindcss/typography": "^0.4.0",
-    "autoprefixer": "^10.2.4",
+    "autoprefixer": "^10.2.5",
     "dotenv": "^8.2.0",
-    "gatsby": "^2.32.3",
+    "gatsby": "^2.32.12",
     "gatsby-image": "^2.11.0",
-    "gatsby-plugin-manifest": "^2.12.0",
-    "gatsby-plugin-offline": "^3.10.0",
+    "gatsby-plugin-manifest": "^2.12.1",
+    "gatsby-plugin-offline": "^3.10.2",
     "gatsby-plugin-postcss": "^3.7.0",
     "gatsby-plugin-react-helmet": "^3.10.0",
-    "gatsby-plugin-sharp": "^2.14.1",
+    "gatsby-plugin-sharp": "^2.14.3",
     "gatsby-plugin-umami": "^0.1.3",
-    "gatsby-source-filesystem": "^2.11.0",
-    "gatsby-transformer-sharp": "^2.12.0",
-    "postcss": "^8.2.6",
+    "gatsby-source-filesystem": "^2.11.1",
+    "gatsby-transformer-sharp": "^2.12.1",
+    "postcss": "^8.2.13",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
+    "react": "^16.14.0",
     "react-div-100vh": "^0.5.6",
-    "react-dom": "^16.12.0",
+    "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
-    "tailwindcss": "^2.0.3"
+    "tailwindcss": "^2.1.2"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "cypress": "^6.5.0",
-    "gatsby-source-craft": "^1.0.0-beta.3",
+    "cypress": "^6.9.1",
+    "gatsby-source-craft": "^1.0.0",
     "prettier": "2.2.1"
   },
   "keywords": [
