--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^8.2.0",
     "gatsby": "^2.32.12",
     "gatsby-image": "^2.11.0",
+    "gatsby-plugin-env-variables": "^2.1.0",
     "gatsby-plugin-manifest": "^2.12.1",
     "gatsby-plugin-offline": "^3.10.2",
     "gatsby-plugin-postcss": "^3.7.0",
